--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,17 +16,16 @@ jobs:
           sudo apt-get install -y texlive-full
           sudo apt-get install -y texlive-lang-cyrillic
           sudo apt-get install -y texlive-fonts-recommended texlive-fonts-extra
-          sudo apt-get install -y texlive-xetex
+          sudo apt-get install -y cm-super
           sudo apt-get install -y fonts-freefont-ttf
           sudo apt-get install -y ttf-mscorefonts-installer
-          sudo apt-get install -y fonts-cmu
-          sudo apt-get install -y fonts-liberation
           sudo fc-cache -f -v
 
       - name: Build PDF
         run: |
           mkdir -p out
-          xelatex -synctex=1 -interaction=nonstopmode -output-directory=out practice_report.tex
+          pdflatex -interaction=nonstopmode -output-directory=out practice_report.tex
+          pdflatex -interaction=nonstopmode -output-directory=out practice_report.tex
 
       - uses: actions/upload-artifact@v4
         with:
